cluster-metal/dpg-authentication/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpg-authentication-keycloak
  namespace: deeppharmgraph
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
