cluster-metal/dpg-authentication/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-dashboard
  namespace: deeppharmgraph
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway
      namespace: kube-system
  hostnames: [dpg-auth.forging.cc]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: v1
          kind: Service
          name: dpg-authentication-keycloak
          port: 80
          weight: 1
